WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64357
[Qt] Forward the touch view scale changes to the tiled drawing area.
https://bugs.webkit.org/show_bug.cgi?id=64357
Summary
[Qt] Forward the touch view scale changes to the tiled drawing area.
Jocelyn Turcotte
Reported
2011-07-12 07:07:33 PDT
[Qt] Forward the touch view scale changes to the tiled drawing area.
Attachments
Patch
(3.71 KB, patch)
2011-07-12 07:10 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch (for comment #4)
(1.57 KB, patch)
2011-07-12 08:05 PDT
,
Jocelyn Turcotte
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2011-07-12 07:10:30 PDT
Created
attachment 100480
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2011-07-12 07:15:51 PDT
Comment on
attachment 100480
[details]
Patch This looks good
Benjamin Poulain
Comment 3
2011-07-12 07:17:16 PDT
Comment on
attachment 100480
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100480&action=review
> Source/WebKit2/UIProcess/qt/qtouchwebpageproxy.cpp:104 > +void QTouchWebPageProxy::setContentsScale(float scale)
should be qreal.
Benjamin Poulain
Comment 4
2011-07-12 07:26:57 PDT
Comment on
attachment 100480
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100480&action=review
> Source/WebKit2/UIProcess/API/qt/qtouchwebpage.cpp:182 > + page->setContentsScale(q->scale());
I would prefer you stop the m_scaleCommitTimer here instead of in QTouchWebPage::timerEvent(). Otherwise it might timeout after the commitScaleChange and you get a second call commitScaleChange, and the assertion would fail.
Kenneth Rohde Christiansen
Comment 5
2011-07-12 07:37:10 PDT
(In reply to
comment #3
)
> (From update of
attachment 100480
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=100480&action=review
> > > Source/WebKit2/UIProcess/qt/qtouchwebpageproxy.cpp:104 > > +void QTouchWebPageProxy::setContentsScale(float scale) > > should be qreal.
Tis is why I found it confusing with mixing webcore and qt types :-(
Jocelyn Turcotte
Comment 6
2011-07-12 07:45:00 PDT
Committed
r90817
: <
http://trac.webkit.org/changeset/90817
>
Jocelyn Turcotte
Comment 7
2011-07-12 07:47:50 PDT
Reopening to address
comment #4
.
Jocelyn Turcotte
Comment 8
2011-07-12 08:05:18 PDT
Created
attachment 100486
[details]
Patch (for
comment #4
) Patch that addresses
comment #4
since I already pushed the fixed that was momentarily r+ed. (The qreal fix was done before pushing)
Jocelyn Turcotte
Comment 9
2011-07-13 02:50:39 PDT
Committed
r90899
: <
http://trac.webkit.org/changeset/90899
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug