[Qt] Forward the touch view scale changes to the tiled drawing area. https://bugs.webkit.org/show_bug.cgi?id=64357

Reviewed by Kenneth Rohde Christiansen.

The drawing area needs to know the new scale to render tiles accordingly.

* UIProcess/API/qt/qtouchwebpage.cpp:
(QTouchWebPagePrivate::commitScaleChange):
* UIProcess/qt/qtouchwebpageproxy.cpp:
(QTouchWebPageProxy::setContentsScale):
* UIProcess/qt/qtouchwebpageproxy.h:
(QTouchWebPageProxy::drawingArea):

Canonical link: https://commits.webkit.org/80081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90817 268f45cc-cd09-0410-ab3c-d52691b4dbfc